# predictive-maintenance-mlops

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pipeline.py  pyproject.toml  requirements-lock.txt  requirements.txt  scenario_design.html
.github/workflows/: ci.yml
docs/: architecture.md
presentation/: build_ppt.py  capture.py
scripts/: run_pipeline.py
src/pdm/: __init__.py  config.py  metrics.py  report.py
src/pdm/automation/: __init__.py  retrain.py
src/pdm/data/: __init__.py  drift.py  features.py  loader.py  physics.py
src/pdm/models/: __init__.py  classifier.py  registry.py
src/pdm/monitoring/: __init__.py  psi.py  spc.py
src/pdm/serving/: __init__.py  api.py  simulation.py
src/pdm/tracking/: __init__.py  mlflow_logger.py
tests/: conftest.py  test_api.py  test_automation.py  test_features.py  test_metrics.py  test_monitoring.py  test_physics.py  test_registry.py  test_regression.py  test_tracking.py
